--- a/src/components/SendMessageForm/styles.module.scss
+++ b/src/components/SendMessageForm/styles.module.scss
@@ -129,6 +129,11 @@
     &:hover{
       filter: brightness(0.9);
     }
+
+    &:disabled {
+      filter: saturate(20%);
+      cursor: not-allowed;
+    }
   }
 }
 
